Finalizes the top left image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,7 @@
   .page {
     @apply w-full h-screen overflow-hidden
   }
+  body {
+    @apply bg-secondary overflow-hidden leading-relaxed;
+  }
 }
